fixed scroll bug on mobile (removed .wrapper)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,10 +9,6 @@ body {
   overflow-x: hidden;
   max-width: 100vw;
 }
-.wrapper {
-  overflow-x: hidden;
-  max-width: 100vw;
-}
 
 /* NAVIGATION BAR */
 
@@ -104,6 +100,7 @@ body {
   order: 0;
 }
 @media (max-width: 800px) {
+  
   .flex {
     flex-direction: column;
   }
